[SMT]: Add getInventory operation
